force-app/main/default/objects/Approval_Suppliers__c/Approval_Suppliers__c.object-meta.xml
<CustomObject>
    <label>Approval Suppliers</label>
    <nameField>
        <displayFormat>AppSup-{00000}</displayFormat>
        <label>Approval Suppliers</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Suppliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>