force-app/main/default/objects/Approval_Suppliers__c/fields/Factcode__c.field-meta.xml
<CustomField>
    <fullName>Factcode__c</fullName>
    <label>Factcode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
            </value>
            <value>
                <fullName>AB VÄSTGÖTA MJÖLKFÖRÄDLING</fullName>
            </value>
            <value>
                <fullName>AC PIENAS KAUNAS</fullName>
            </value>
            <value>
                <fullName>AGGLOMIX TILBURG</fullName>
            </value>
            <value>
                <fullName>AGRI-MARK WEST SPRINGFIELD</fullName>
            </value>
            <value>
                <fullName>AGROPUR IDAHO JEROME</fullName>
            </value>
            <value>
                <fullName>AGROPUR LAKE NORDEN</fullName>
            </value>
            <value>
                <fullName>ALFÖLDI TEJ KFT. DEBRECEN</fullName>
            </value>
            <value>
                <fullName>ALIMA GORA</fullName>
            </value>
            <value>
                <fullName>ALIMENTOS FRAY BENTOS</fullName>
            </value>
            <value>
                <fullName>ALL-IMPEX PARDUBICE</fullName>
            </value>
            <value>
                <fullName>ALMIL BÜTZOW</fullName>
            </value>
            <value>
                <fullName>ALPAVIT ALLGÄU</fullName>
            </value>
            <value>
                <fullName>ALPAVIT LAUBEN/HEISING, ALLGÄU</fullName>
            </value>
            <value>
                <fullName>ALPI MILCHVERARBEITUNG RIED</fullName>
            </value>
            <value>
                <fullName>ALTMARK-KÄSEREI BISMARK</fullName>
            </value>
            <value>
                <fullName>AMMERLAND ALL FACTORIES</fullName>
            </value>
            <value>
                <fullName>AMMERLAND DRINGENBURG</fullName>
            </value>
            <value>
                <fullName>AMMERLAND ELSDORF</fullName>
            </value>
            <value>
                <fullName>AMMERLAND WIEFELSTEDE</fullName>
            </value>
            <value>
                <fullName>AMPI WISCONSIN</fullName>
            </value>
            <value>
                <fullName>ARLA AKAFA SVENSTRUP</fullName>
            </value>
            <value>
                <fullName>ARLA ALL FACTORIES</fullName>
            </value>
            <value>
                <fullName>ARLA FOOD GÖTENE</fullName>
            </value>
            <value>
                <fullName>ARLA FOODS PRONSFELD</fullName>
            </value>
            <value>
                <fullName>ARLA FOODS HOLSTEBRO</fullName>
            </value>
            <value>
                <fullName>ARLA FOODS TINE BRUMUNDDAL</fullName>
            </value>
            <value>
                <fullName>ARLA FOODS UPAHL</fullName>
            </value>
            <value>
                <fullName>ARLA FOODS VIMMERBY</fullName>
            </value>
            <value>
                <fullName>ARLA FOODS VISBY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>