force-app/main/default/objects/Approval_Suppliers__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Approval Suppliers</relationshipLabel>
    <relationshipName>Approval_Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>